WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280576
Object.assign doesn't handle modified self-assignment properly
https://bugs.webkit.org/show_bug.cgi?id=280576
Summary
Object.assign doesn't handle modified self-assignment properly
GuY
Reported
2024-09-28 19:06:17 PDT
``` for (let i = 0; i < 5; i++) { function CLS(value) { this.prop = value; } const a = new CLS(5); const b = new CLS(6); Object.assign(a, b, a); print(a.prop) } ``` run args: ./WebKitBuild/JSCOnly/Debug/bin/jsc test.js --useConcurrentJIT=0 actual output: 6 6 5 5 5 tested in the latest webkit main branch 81b0097021b1003a3942a1b470bf750a846e3b45
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2024-09-30 07:09:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34449
EWS
Comment 2
2024-10-01 04:33:14 PDT
Committed
284486@main
(d66fa25fde99): <
https://commits.webkit.org/284486@main
> Reviewed commits have been landed. Closing PR #34449 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-01 04:34:14 PDT
<
rdar://problem/137040490
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug