[JSC] `Object.assign` shouldn't do batching when sources argument contains target object https://bugs.webkit.org/show_bug.cgi?id=280576

Reviewed by Yusuke Suzuki.

This patch changes to prevent executing the batching path when the `sources` argument of
`Object.assign` contains the same object as the `target`.

* JSTests/stress/object-assign-self-assign.js: Added.
(sameValue):
(i.CLS):
* Source/JavaScriptCore/runtime/ObjectConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/284486@main